RR-T40 Logout fix, close call fix, units state fix, contacts fix, protocols fix.

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -750,6 +750,10 @@
     "links": "الروابط",
     "login_info": "معلومات تسجيل الدخول",
     "logout": "تسجيل خروج",
+    "logout_confirm_cancel": "إلغاء",
+    "logout_confirm_message": "هل أنت متأكد من أنك تريد تسجيل الخروج؟ سيتم مسح جميع البيانات المحلية والقيم المخزنة مؤقتًا والإعدادات المحفوظة من التطبيق.",
+    "logout_confirm_title": "تأكيد تسجيل الخروج",
+    "logout_confirm_yes": "نعم، تسجيل الخروج",
     "more": "المزيد",
     "no_units_available": "لا توجد وحدات متاحة",
     "none_selected": "لم يتم اختيار أي شيء",
@@ -881,6 +885,7 @@
     "plateNumber": "رقم اللوحة",
     "search": "البحث في الوحدات...",
     "specialPermit": "تصريح خاص",
+    "tapToOpenMaps": "اضغط لفتح في الخرائط",
     "title": "الوحدات",
     "vehicleInfo": "معلومات المركبة",
     "vin": "رقم الهيكل"
