--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -750,6 +750,10 @@
     "links": "Enlaces",
     "login_info": "Información de inicio de sesión",
     "logout": "Cerrar sesión",
+    "logout_confirm_cancel": "Cancelar",
+    "logout_confirm_message": "¿Estás seguro de que deseas cerrar sesión? Todos los datos locales, valores en caché y configuraciones guardadas se eliminarán de la aplicación.",
+    "logout_confirm_title": "Confirmar cierre de sesión",
+    "logout_confirm_yes": "Sí, cerrar sesión",
     "more": "Más",
     "no_units_available": "No hay unidades disponibles",
     "none_selected": "Ninguna seleccionada",
@@ -881,6 +885,7 @@
     "plateNumber": "Número de placa",
     "search": "Buscar unidades...",
     "specialPermit": "Permiso especial",
+    "tapToOpenMaps": "Toca para abrir en mapas",
     "title": "Unidades",
     "vehicleInfo": "Información del vehículo",
     "vin": "VIN"
