--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -144,6 +144,7 @@
   },
   "callNotes": {
     "addNote": "Add Note",
+    "addNoteError": "Failed to add note. Please try again.",
     "addNotePlaceholder": "Add a new note...",
     "noNotes": "No notes available for this call",
     "noSearchResults": "No notes match your search",
@@ -410,8 +411,6 @@
     "emptyDescription": "Add contacts to manage your personal and business connections",
     "entranceCoordinates": "Entrance Coordinates",
     "errorTitle": "Error",
-    "openAppError": "Unable to open {{action}} app",
-    "openLinkFailed": "Failed to open {{action}} link:",
     "exitCoordinates": "Exit Coordinates",
     "expires": "Expires",
     "facebook": "Facebook",
@@ -434,6 +433,8 @@
     "notes": "Notes",
     "notesTab": "Notes",
     "officePhone": "Office Phone",
+    "openAppError": "Unable to open {{action}} app",
+    "openLinkFailed": "Failed to open {{action}} link:",
     "otherInfo": "Other Information",
     "person": "Person",
     "phone": "Phone",
