--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -144,6 +144,7 @@
   },
   "callNotes": {
     "addNote": "Añadir nota",
+    "addNoteError": "No se pudo agregar la nota. Por favor, inténtelo de nuevo.",
     "addNotePlaceholder": "Añadir una nueva nota...",
     "noNotes": "No hay notas disponibles para esta llamada",
     "noSearchResults": "No hay notas que coincidan con tu búsqueda",
@@ -410,8 +411,6 @@
     "emptyDescription": "Añade contactos para gestionar tus conexiones personales y comerciales",
     "entranceCoordinates": "Coordenadas de entrada",
     "errorTitle": "Error",
-    "openAppError": "No se puede abrir la aplicación de {{action}}",
-    "openLinkFailed": "Error al abrir el enlace de {{action}}:",
     "exitCoordinates": "Coordenadas de salida",
     "expires": "Expira",
     "facebook": "Facebook",
@@ -434,6 +433,8 @@
     "notes": "Notas",
     "notesTab": "Notas",
     "officePhone": "Teléfono de oficina",
+    "openAppError": "No se puede abrir la aplicación de {{action}}",
+    "openLinkFailed": "Error al abrir el enlace de {{action}}:",
     "otherInfo": "Otra información",
     "person": "Persona",
     "phone": "Teléfono",
