RR-T40 testing fixes

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -127,6 +127,7 @@
   "callImages": {
     "add": "إضافة صورة",
     "add_new": "إضافة صورة جديدة",
+    "capture_error": "خطأ في التقاط الصورة. يرجى المحاولة مرة أخرى.",
     "default_name": "صورة بدون عنوان",
     "error": "خطأ في الحصول على الصور",
     "failed_to_load": "فشل في تحميل الصورة",
@@ -135,6 +136,8 @@
     "loading": "جاري التحميل...",
     "no_images": "لا توجد صور متاحة",
     "no_images_description": "أضف صورًا إلى مكالمتك للمساعدة في التوثيق والتواصل",
+    "permission_denied_settings": "تم رفض الإذن. يرجى تمكين الوصول في إعدادات جهازك.",
+    "select_error": "خطأ في اختيار الصورة. يرجى المحاولة مرة أخرى.",
     "select_from_gallery": "اختر من المعرض",
     "take_photo": "التقط صورة",
     "title": "صور المكالمة",
@@ -803,6 +806,7 @@
   "shifts": {
     "all_shifts": "كل النوبات",
     "already_signed_up": "مسجل بالفعل",
+    "assigned": "مُعيَّن",
     "automatic": "تلقائي",
     "available": "متاح",
     "calendar": "التقويم",
@@ -812,6 +816,7 @@
     "end_time": "وقت الانتهاء",
     "groups": "المجموعات",
     "in_shift": "في النوبة",
+    "legend": "دليل",
     "loading": "جاري تحميل النوبات...",
     "loading_details": "جاري تحميل تفاصيل النوبة...",
     "loading_signup": "جاري المعالجة...",
@@ -856,6 +861,7 @@
     "type_training": "تدريب",
     "type_unknown": "غير معروف",
     "unknown": "غير معروف",
+    "upcoming_shift_days": "أيام النوبات القادمة",
     "withdraw": "الانسحاب",
     "withdraw_error": "فشل في الانسحاب من النوبة",
     "withdraw_success": "تم الانسحاب بنجاح من النوبة",
