--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -127,6 +127,7 @@
   "callImages": {
     "add": "Add Image",
     "add_new": "Add New Image",
+    "capture_error": "Error capturing photo. Please try again.",
     "default_name": "Untitled Image",
     "error": "Error getting images",
     "failed_to_load": "Failed to load image",
@@ -135,6 +136,8 @@
     "loading": "Loading...",
     "no_images": "No images available",
     "no_images_description": "Add images to your call to help with documentation and communication",
+    "permission_denied_settings": "Permission denied. Please enable access in your device settings.",
+    "select_error": "Error selecting image. Please try again.",
     "select_from_gallery": "Select from Gallery",
     "take_photo": "Take Photo",
     "title": "Call Images",
@@ -805,6 +808,7 @@
   "shifts": {
     "all_shifts": "All Shifts",
     "already_signed_up": "Already Signed Up",
+    "assigned": "Assigned",
     "automatic": "Automatic",
     "available": "Available",
     "calendar": "Calendar",
@@ -814,6 +818,7 @@
     "end_time": "End Time",
     "groups": "Groups",
     "in_shift": "In Shift",
+    "legend": "Legend",
     "loading": "Loading shifts...",
     "loading_details": "Loading shift details...",
     "loading_signup": "Processing...",
@@ -858,6 +863,7 @@
     "type_training": "Training",
     "type_unknown": "Unknown",
     "unknown": "Unknown",
+    "upcoming_shift_days": "Upcoming Shift Days",
     "withdraw": "Withdraw",
     "withdraw_error": "Failed to withdraw from shift",
     "withdraw_success": "Successfully withdrew from shift",
