--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -127,14 +127,17 @@
   "callImages": {
     "add": "Añadir imagen",
     "add_new": "Añadir nueva imagen",
+    "capture_error": "Error al capturar la foto. Por favor, inténtalo de nuevo.",
     "default_name": "Imagen sin título",
     "error": "Error al obtener imágenes",
     "failed_to_load": "Error al cargar la imagen",
     "image_name": "Nombre de la imagen",
-    "image_note": "Nota de imagen",
+    "image_note": "Nota de la imagen",
     "loading": "Cargando...",
     "no_images": "No hay imágenes disponibles",
-    "no_images_description": "Añade imágenes a tu llamada para ayudar con la documentación y comunicación",
+    "no_images_description": "Agregue imágenes a su llamada para ayudar con la documentación y la comunicación",
+    "permission_denied_settings": "Permiso denegado. Por favor, habilita el acceso en la configuración de tu dispositivo.",
+    "select_error": "Error al seleccionar la imagen. Por favor, inténtalo de nuevo.",
     "select_from_gallery": "Seleccionar de la galería",
     "take_photo": "Tomar foto",
     "title": "Imágenes de la llamada",
@@ -805,6 +808,7 @@
   "shifts": {
     "all_shifts": "Todos los Turnos",
     "already_signed_up": "Ya Registrado",
+    "assigned": "Asignado",
     "automatic": "Automático",
     "available": "Disponible",
     "calendar": "Calendario",
@@ -814,6 +818,7 @@
     "end_time": "Hora de Fin",
     "groups": "Grupos",
     "in_shift": "En Turno",
+    "legend": "Leyenda",
     "loading": "Cargando turnos...",
     "loading_details": "Cargando detalles del turno...",
     "loading_signup": "Procesando...",
@@ -858,6 +863,7 @@
     "type_training": "Entrenamiento",
     "type_unknown": "Desconocido",
     "unknown": "Desconocido",
+    "upcoming_shift_days": "Próximos Días de Turno",
     "withdraw": "Retirarse",
     "withdraw_error": "Error al retirarse del turno",
     "withdraw_success": "Se retiró exitosamente del turno",
