RU-T46 Bug fixed from testing

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -362,7 +362,9 @@
     "no_results_found": "لم يتم العثور على نتائج",
     "no_unit_selected": "لم يتم اختيار وحدة",
     "of": "من",
+    "ok": "موافق",
     "optional": "اختياري",
+    "permission_denied": "تم رفض الإذن",
     "previous": "السابق",
     "refresh": "تحديث",
     "retry": "إعادة المحاولة",
@@ -375,6 +377,7 @@
     "submitting": "جاري الإرسال...",
     "success": "نجح",
     "unknown_department": "إدارة غير معروفة",
+    "uploading": "جارٍ الرفع...",
     "unknown_user": "مستخدم غير معروف"
   },
   "contacts": {
@@ -402,6 +405,7 @@
     "deleteConfirm": "هل أنت متأكد أنك تريد حذف جهة الاتصال هذه؟",
     "deleteSuccess": "تم حذف جهة الاتصال بنجاح",
     "description": "إضافة وإدارة جهات الاتصال الخاصة بك",
+    "descriptionLabel": "الوصف",
     "details": "تفاصيل جهة الاتصال",
     "detailsTab": "التفاصيل",
     "edit": "تعديل جهة الاتصال",
@@ -525,7 +529,24 @@
     "speaker": "السماعة",
     "speaking": "يتحدث",
     "title": "القنوات الصوتية",
-    "unmute": "إلغاء الكتم"
+    "unmute": "إلغاء الكتم",
+    "headset_button_ptt": "PTT بزر السماعة",
+    "headset_ptt_enabled": "PTT بالسماعة مفعل",
+    "headset_ptt_disabled": "PTT بالسماعة معطل",
+    "headset_ptt_description": "استخدم زر AirPods أو سماعات البلوتوث لكتم/إلغاء الكتم",
+    "ptt_mode": "وضع PTT",
+    "ptt_mode_toggle": "تبديل (اضغط للتغيير)",
+    "ptt_mode_push": "اضغط للتحدث (اضغط مع الاستمرار)",
+    "ptt_mode_disabled": "معطل",
+    "play_pause_action": "إجراء زر التشغيل/الإيقاف",
+    "double_click_action": "إجراء النقر المزدوج",
+    "long_press_action": "إجراء الضغط المطول",
+    "toggle_mute": "تبديل الكتم",
+    "no_action": "لا إجراء",
+    "sound_feedback": "ردود فعل صوتية",
+    "headset_monitoring_active": "مراقبة السماعة نشطة",
+    "headset_monitoring_inactive": "مراقبة السماعة غير نشطة",
+    "tap_to_toggle_mute": "اضغط على زر السماعة لتبديل الكتم"
   },
   "loading": {
     "loading": "جاري التحميل...",
