--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -364,7 +364,9 @@
     "no_results_found": "No results found",
     "no_unit_selected": "No Unit Selected",
     "of": "of",
+    "ok": "OK",
     "optional": "Optional",
+    "permission_denied": "Permission denied",
     "previous": "Previous",
     "refresh": "Refresh",
     "retry": "Retry",
@@ -377,6 +379,7 @@
     "submitting": "Submitting...",
     "success": "Success",
     "unknown_department": "Unknown Department",
+    "uploading": "Uploading...",
     "unknown_user": "Unknown User"
   },
   "contacts": {
@@ -404,6 +407,7 @@
     "deleteConfirm": "Are you sure you want to delete this contact?",
     "deleteSuccess": "Contact deleted successfully",
     "description": "Add and manage your contacts",
+    "descriptionLabel": "Description",
     "details": "Contact Details",
     "detailsTab": "Details",
     "edit": "Edit Contact",
@@ -527,7 +531,24 @@
     "speaker": "Speaker",
     "speaking": "Speaking",
     "title": "Voice Channels",
-    "unmute": "Unmute"
+    "unmute": "Unmute",
+    "headset_button_ptt": "Headset Button PTT",
+    "headset_ptt_enabled": "Headset PTT Enabled",
+    "headset_ptt_disabled": "Headset PTT Disabled",
+    "headset_ptt_description": "Use AirPods or Bluetooth earbuds button to mute/unmute",
+    "ptt_mode": "PTT Mode",
+    "ptt_mode_toggle": "Toggle (tap to switch mute)",
+    "ptt_mode_push": "Push-to-Talk (hold to talk)",
+    "ptt_mode_disabled": "Disabled",
+    "play_pause_action": "Play/Pause Button Action",
+    "double_click_action": "Double Click Action",
+    "long_press_action": "Long Press Action",
+    "toggle_mute": "Toggle Mute",
+    "no_action": "No Action",
+    "sound_feedback": "Sound Feedback",
+    "headset_monitoring_active": "Headset monitoring active",
+    "headset_monitoring_inactive": "Headset monitoring inactive",
+    "tap_to_toggle_mute": "Tap headset button to toggle mute"
   },
   "loading": {
     "loading": "Loading...",
