--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -364,7 +364,9 @@
     "no_results_found": "No se encontraron resultados",
     "no_unit_selected": "Ninguna unidad seleccionada",
     "of": "de",
+    "ok": "Aceptar",
     "optional": "Opcional",
+    "permission_denied": "Permiso denegado",
     "previous": "Anterior",
     "refresh": "Actualizar",
     "retry": "Reintentar",
@@ -377,6 +379,7 @@
     "submitting": "Enviando...",
     "success": "Éxito",
     "unknown_department": "Departamento Desconocido",
+    "uploading": "Subiendo...",
     "unknown_user": "Usuario Desconocido"
   },
   "contacts": {
@@ -404,6 +407,7 @@
     "deleteConfirm": "¿Estás seguro de que quieres eliminar este contacto?",
     "deleteSuccess": "Contacto eliminado con éxito",
     "description": "Añadir y gestionar tus contactos",
+    "descriptionLabel": "Descripción",
     "details": "Detalles del contacto",
     "detailsTab": "Detalles",
     "edit": "Editar contacto",
@@ -527,7 +531,24 @@
     "speaker": "Altavoz",
     "speaking": "Hablando",
     "title": "Canales de voz",
-    "unmute": "Activar sonido"
+    "unmute": "Activar sonido",
+    "headset_button_ptt": "PTT con auriculares",
+    "headset_ptt_enabled": "PTT con auriculares activado",
+    "headset_ptt_disabled": "PTT con auriculares desactivado",
+    "headset_ptt_description": "Usa el botón de AirPods o auriculares Bluetooth para silenciar/activar",
+    "ptt_mode": "Modo PTT",
+    "ptt_mode_toggle": "Alternar (toca para cambiar)",
+    "ptt_mode_push": "Pulsar para hablar (mantén presionado)",
+    "ptt_mode_disabled": "Desactivado",
+    "play_pause_action": "Acción del botón Play/Pausa",
+    "double_click_action": "Acción de doble clic",
+    "long_press_action": "Acción de pulsación larga",
+    "toggle_mute": "Alternar silencio",
+    "no_action": "Sin acción",
+    "sound_feedback": "Retroalimentación de sonido",
+    "headset_monitoring_active": "Monitoreo de auriculares activo",
+    "headset_monitoring_inactive": "Monitoreo de auriculares inactivo",
+    "tap_to_toggle_mute": "Toca el botón del auricular para alternar silencio"
   },
   "loading": {
     "loading": "Cargando...",
