RR-T40 PR#96 fixes

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -146,7 +146,9 @@
     "upload_success": "تم رفع الصورة بنجاح"
   },
   "callNotes": {
-    "addNote": "إضافة ملاحظة",    "addNoteError": "فشل إضافة الملاحظة. يرجى المحاولة مرة أخرى.",    "addNotePlaceholder": "أضف ملاحظة جديدة...",
+    "addNote": "إضافة ملاحظة",
+    "addNoteError": "فشل إضافة الملاحظة. يرجى المحاولة مرة أخرى.",
+    "addNotePlaceholder": "أضف ملاحظة جديدة...",
     "noNotes": "لا توجد ملاحظات متاحة لهذه المكالمة",
     "noSearchResults": "لا توجد ملاحظات تطابق بحثك",
     "searchPlaceholder": "البحث في الملاحظات...",
@@ -377,8 +379,8 @@
     "submitting": "جاري الإرسال...",
     "success": "نجح",
     "unknown_department": "إدارة غير معروفة",
-    "uploading": "جارٍ الرفع...",
-    "unknown_user": "مستخدم غير معروف"
+    "unknown_user": "مستخدم غير معروف",
+    "uploading": "جارٍ الرفع..."
   },
   "contacts": {
     "add": "إضافة جهة اتصال",
@@ -522,31 +524,31 @@
     "connected_to_room": "متصل بالقناة",
     "connecting": "جاري الاتصال...",
     "disconnect": "قطع الاتصال",
-    "join": "انضمام",
-    "microphone": "الميكروفون",
-    "mute": "كتم",
-    "no_rooms_available": "لا توجد قنوات صوتية متاحة",
-    "speaker": "السماعة",
-    "speaking": "يتحدث",
-    "title": "القنوات الصوتية",
-    "unmute": "إلغاء الكتم",
-    "headset_button_ptt": "PTT بزر السماعة",
-    "headset_ptt_enabled": "PTT بالسماعة مفعل",
-    "headset_ptt_disabled": "PTT بالسماعة معطل",
-    "headset_ptt_description": "استخدم زر AirPods أو سماعات البلوتوث لكتم/إلغاء الكتم",
-    "ptt_mode": "وضع PTT",
-    "ptt_mode_toggle": "تبديل (اضغط للتغيير)",
-    "ptt_mode_push": "اضغط للتحدث (اضغط مع الاستمرار)",
-    "ptt_mode_disabled": "معطل",
-    "play_pause_action": "إجراء زر التشغيل/الإيقاف",
     "double_click_action": "إجراء النقر المزدوج",
-    "long_press_action": "إجراء الضغط المطول",
-    "toggle_mute": "تبديل الكتم",
-    "no_action": "لا إجراء",
-    "sound_feedback": "ردود فعل صوتية",
+    "headset_button_ptt": "PTT بزر السماعة",
     "headset_monitoring_active": "مراقبة السماعة نشطة",
     "headset_monitoring_inactive": "مراقبة السماعة غير نشطة",
-    "tap_to_toggle_mute": "اضغط على زر السماعة لتبديل الكتم"
+    "headset_ptt_description": "استخدم زر AirPods أو سماعات البلوتوث لكتم/إلغاء الكتم",
+    "headset_ptt_disabled": "PTT بالسماعة معطل",
+    "headset_ptt_enabled": "PTT بالسماعة مفعل",
+    "join": "انضمام",
+    "long_press_action": "إجراء الضغط المطول",
+    "microphone": "الميكروفون",
+    "mute": "كتم",
+    "no_action": "لا إجراء",
+    "no_rooms_available": "لا توجد قنوات صوتية متاحة",
+    "play_pause_action": "إجراء زر التشغيل/الإيقاف",
+    "ptt_mode": "وضع PTT",
+    "ptt_mode_disabled": "معطل",
+    "ptt_mode_push": "اضغط للتحدث (اضغط مع الاستمرار)",
+    "ptt_mode_toggle": "تبديل (اضغط للتغيير)",
+    "sound_feedback": "ردود فعل صوتية",
+    "speaker": "السماعة",
+    "speaking": "يتحدث",
+    "tap_to_toggle_mute": "اضغط على زر السماعة لتبديل الكتم",
+    "title": "القنوات الصوتية",
+    "toggle_mute": "تبديل الكتم",
+    "unmute": "إلغاء الكتم"
   },
   "loading": {
     "loading": "جاري التحميل...",
