--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -379,8 +379,8 @@
     "submitting": "Submitting...",
     "success": "Success",
     "unknown_department": "Unknown Department",
-    "uploading": "Uploading...",
-    "unknown_user": "Unknown User"
+    "unknown_user": "Unknown User",
+    "uploading": "Uploading..."
   },
   "contacts": {
     "add": "Add Contact",
@@ -524,31 +524,31 @@
     "connected_to_room": "Connected to Channel",
     "connecting": "Connecting...",
     "disconnect": "Disconnect",
-    "join": "Join",
-    "microphone": "Microphone",
-    "mute": "Mute",
-    "no_rooms_available": "No voice channels available",
-    "speaker": "Speaker",
-    "speaking": "Speaking",
-    "title": "Voice Channels",
-    "unmute": "Unmute",
-    "headset_button_ptt": "Headset Button PTT",
-    "headset_ptt_enabled": "Headset PTT Enabled",
-    "headset_ptt_disabled": "Headset PTT Disabled",
-    "headset_ptt_description": "Use AirPods or Bluetooth earbuds button to mute/unmute",
-    "ptt_mode": "PTT Mode",
-    "ptt_mode_toggle": "Toggle (tap to switch mute)",
-    "ptt_mode_push": "Push-to-Talk (hold to talk)",
-    "ptt_mode_disabled": "Disabled",
-    "play_pause_action": "Play/Pause Button Action",
     "double_click_action": "Double Click Action",
-    "long_press_action": "Long Press Action",
-    "toggle_mute": "Toggle Mute",
-    "no_action": "No Action",
-    "sound_feedback": "Sound Feedback",
+    "headset_button_ptt": "Headset Button PTT",
     "headset_monitoring_active": "Headset monitoring active",
     "headset_monitoring_inactive": "Headset monitoring inactive",
-    "tap_to_toggle_mute": "Tap headset button to toggle mute"
+    "headset_ptt_description": "Use AirPods or Bluetooth earbuds button to mute/unmute",
+    "headset_ptt_disabled": "Headset PTT Disabled",
+    "headset_ptt_enabled": "Headset PTT Enabled",
+    "join": "Join",
+    "long_press_action": "Long Press Action",
+    "microphone": "Microphone",
+    "mute": "Mute",
+    "no_action": "No Action",
+    "no_rooms_available": "No voice channels available",
+    "play_pause_action": "Play/Pause Button Action",
+    "ptt_mode": "PTT Mode",
+    "ptt_mode_disabled": "Disabled",
+    "ptt_mode_push": "Push-to-Talk (hold to talk)",
+    "ptt_mode_toggle": "Toggle (tap to switch mute)",
+    "sound_feedback": "Sound Feedback",
+    "speaker": "Speaker",
+    "speaking": "Speaking",
+    "tap_to_toggle_mute": "Tap headset button to toggle mute",
+    "title": "Voice Channels",
+    "toggle_mute": "Toggle Mute",
+    "unmute": "Unmute"
   },
   "loading": {
     "loading": "Loading...",
