--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -379,8 +379,8 @@
     "submitting": "Enviando...",
     "success": "Éxito",
     "unknown_department": "Departamento Desconocido",
-    "uploading": "Subiendo...",
-    "unknown_user": "Usuario Desconocido"
+    "unknown_user": "Usuario Desconocido",
+    "uploading": "Subiendo..."
   },
   "contacts": {
     "add": "Añadir contacto",
@@ -524,31 +524,31 @@
     "connected_to_room": "Conectado al canal",
     "connecting": "Conectando...",
     "disconnect": "Desconectar",
-    "join": "Unirse",
-    "microphone": "Micrófono",
-    "mute": "Silenciar",
-    "no_rooms_available": "No hay canales de voz disponibles",
-    "speaker": "Altavoz",
-    "speaking": "Hablando",
-    "title": "Canales de voz",
-    "unmute": "Activar sonido",
-    "headset_button_ptt": "PTT con auriculares",
-    "headset_ptt_enabled": "PTT con auriculares activado",
-    "headset_ptt_disabled": "PTT con auriculares desactivado",
-    "headset_ptt_description": "Usa el botón de AirPods o auriculares Bluetooth para silenciar/activar",
-    "ptt_mode": "Modo PTT",
-    "ptt_mode_toggle": "Alternar (toca para cambiar)",
-    "ptt_mode_push": "Pulsar para hablar (mantén presionado)",
-    "ptt_mode_disabled": "Desactivado",
-    "play_pause_action": "Acción del botón Play/Pausa",
     "double_click_action": "Acción de doble clic",
-    "long_press_action": "Acción de pulsación larga",
-    "toggle_mute": "Alternar silencio",
-    "no_action": "Sin acción",
-    "sound_feedback": "Retroalimentación de sonido",
+    "headset_button_ptt": "PTT con auriculares",
     "headset_monitoring_active": "Monitoreo de auriculares activo",
     "headset_monitoring_inactive": "Monitoreo de auriculares inactivo",
-    "tap_to_toggle_mute": "Toca el botón del auricular para alternar silencio"
+    "headset_ptt_description": "Usa el botón de AirPods o auriculares Bluetooth para silenciar/activar",
+    "headset_ptt_disabled": "PTT con auriculares desactivado",
+    "headset_ptt_enabled": "PTT con auriculares activado",
+    "join": "Unirse",
+    "long_press_action": "Acción de pulsación larga",
+    "microphone": "Micrófono",
+    "mute": "Silenciar",
+    "no_action": "Sin acción",
+    "no_rooms_available": "No hay canales de voz disponibles",
+    "play_pause_action": "Acción del botón Play/Pausa",
+    "ptt_mode": "Modo PTT",
+    "ptt_mode_disabled": "Desactivado",
+    "ptt_mode_push": "Pulsar para hablar (mantén presionado)",
+    "ptt_mode_toggle": "Alternar (toca para cambiar)",
+    "sound_feedback": "Retroalimentación de sonido",
+    "speaker": "Altavoz",
+    "speaking": "Hablando",
+    "tap_to_toggle_mute": "Toca el botón del auricular para alternar silencio",
+    "title": "Canales de voz",
+    "toggle_mute": "Alternar silencio",
+    "unmute": "Activar sonido"
   },
   "loading": {
     "loading": "Cargando...",
