RU-T47 Audio sheet fixes

--- a/src/translations/ar.json
+++ b/src/translations/ar.json
@@ -7,6 +7,7 @@
     "buffering_stream": "جاري التخزين المؤقت للبث الصوتي...",
     "close": "إغلاق",
     "currently_playing": "يتم تشغيل حاليًا: {{streamName}}",
+    "error_loading_stream": "خطأ في تحميل البث الصوتي",
     "loading": "جاري التحميل...",
     "loading_stream": "جاري تحميل البث الصوتي...",
     "loading_streams": "جاري تحميل البثوث الصوتية...",
@@ -764,6 +765,19 @@
     "app_info": "معلومات التطبيق",
     "app_name": "اسم التطبيق",
     "arabic": "عربي",
+    "audio_device_selection": {
+      "bluetooth_device": "جهاز بلوتوث",
+      "current_selection": "الاختيار الحالي",
+      "microphone": "الميكروفون",
+      "no_microphones_available": "لا توجد ميكروفونات متاحة",
+      "no_speakers_available": "لا توجد مكبرات صوت متاحة",
+      "none_selected": "لم يتم اختيار أي شيء",
+      "speaker": "مكبر الصوت",
+      "speaker_device": "مكبر الصوت",
+      "title": "اختيار جهاز الصوت",
+      "unavailable": "غير متاح",
+      "wired_device": "جهاز سلكي"
+    },
     "background_geolocation": "تحديد الموقع الجغرافي في الخلفية",
     "background_geolocation_warning": "تسمح هذه الميزة للتطبيق بتتبع موقعك في الخلفية. تساعد في تنسيق الاستجابة للطوارئ ولكن قد تؤثر على عمر البطارية.",
     "background_location": "الموقع في الخلفية",
