--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -7,6 +7,7 @@
     "buffering_stream": "Buffering audio stream...",
     "close": "Close",
     "currently_playing": "Currently playing: {{streamName}}",
+    "error_loading_stream": "Failed to load audio stream",
     "loading": "Loading",
     "loading_stream": "Loading audio stream...",
     "loading_streams": "Loading audio streams...",
@@ -764,6 +765,19 @@
     "app_info": "App Info",
     "app_name": "App Name",
     "arabic": "Arabic",
+    "audio_device_selection": {
+      "bluetooth_device": "Bluetooth Device",
+      "current_selection": "Current Selection",
+      "microphone": "Microphone",
+      "no_microphones_available": "No microphones available",
+      "no_speakers_available": "No speakers available",
+      "none_selected": "None Selected",
+      "speaker": "Speaker",
+      "speaker_device": "Speaker",
+      "title": "Audio Device Selection",
+      "unavailable": "Unavailable",
+      "wired_device": "Wired Device"
+    },
     "background_geolocation": "Background Geolocation",
     "background_geolocation_warning": "This feature allows the app to track your location in the background. It helps with emergency response coordination but may impact battery life.",
     "background_location": "Background Location",
