--- a/src/translations/es.json
+++ b/src/translations/es.json
@@ -7,6 +7,7 @@
     "buffering_stream": "Almacenando transmisión de audio en búfer...",
     "close": "Cerrar",
     "currently_playing": "Reproduciendo actualmente: {{streamName}}",
+    "error_loading_stream": "Error al cargar la transmisión",
     "loading": "Cargando",
     "loading_stream": "Cargando transmisión de audio...",
     "loading_streams": "Cargando transmisiones de audio...",
@@ -764,6 +765,19 @@
     "app_info": "Información de la aplicación",
     "app_name": "Nombre de la aplicación",
     "arabic": "Árabe",
+    "audio_device_selection": {
+      "bluetooth_device": "Dispositivo Bluetooth",
+      "current_selection": "Selección Actual",
+      "microphone": "Micrófono",
+      "no_microphones_available": "No hay micrófonos disponibles",
+      "no_speakers_available": "No hay altavoces disponibles",
+      "none_selected": "Ninguno Seleccionado",
+      "speaker": "Altavoz",
+      "speaker_device": "Altavoz",
+      "title": "Selección de Dispositivo de Audio",
+      "unavailable": "No disponible",
+      "wired_device": "Dispositivo Cableado"
+    },
     "background_geolocation": "Geolocalización en segundo plano",
     "background_geolocation_warning": "Esta función permite que la aplicación rastree tu ubicación en segundo plano. Ayuda con la coordinación de respuesta de emergencia pero puede impactar la duración de la batería.",
     "background_location": "Ubicación en segundo plano",
